--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "@slidev/theme-seriph": "latest",
     "slidev-theme-unicorn": "^1.1.2",
     "vue": "^3.5.13"
+  },
+  "devDependencies": {
+    "playwright-chromium": "^1.50.1"
   }
 }
